[package]
name = "mutagen"
version = "0.2.0"
authors = ["Samuel Pilz <samuel.pilz@posteo.net>"]
edition = "2018"

[dependencies]
mutagen-transform = { path = "../transform" }
lazy_static = "1.3.0"


[dev-dependencies]
mutagen = { path = ".", features = ["self_test"] }

[features]
# this is a flag that is required for integration tests to allow setting the environment configuration from tests.
# This is not intended to be used for users of `mutagen`.
self_test = []
